--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 
+0.03 2012.05.26
+  - replace before by hook before as Dancer has deprecated the former
+    (reported by Father Chrysostomos)
+  - perltidy the whole project
 
 0.02 2011.05.15
   - Add missing prerequisites.
