--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 
+0.04 2012.05.28
+  - missing requiremend DBD::SQLite
+  - specify the policies better
+
 0.03 2012.05.26
   - replace before by hook before as Dancer has deprecated the former
     (reported by Father Chrysostomos)
