Import of SZABGAB/CPAN-Digger-0.08 from CPAN.
gitpan-cpan-distribution: CPAN-Digger
gitpan-cpan-version:      0.08
gitpan-cpan-path:         SZABGAB/CPAN-Digger-0.08.tar.gz
gitpan-cpan-author:       SZABGAB
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+0.08 2013.01.14
+  - remove 3 prereqs that failed on Windows.
 
 0.07 2013.01.13
   - Add all the Perl::Critic::* packages to the list of prereqs.
